# cloud-hw1

./: .env.example  LICENSE  README.md  db.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  setup.py  steps.txt
app/: autogen.py  database.py  main.py
app/auth/: utils.py
app/models/: __init__.py  consts.py  user.py
app/routers/: users.py
migrations/: env.py
migrations/versions/: 05a280835e83_init_db.py
