[project]
name = "cloud-hw1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "bcrypt>=5.0.0",
    "datetime>=6.0",
    "fastapi>=0.123.0",
    "fastapi-pagination>=0.15.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.27",
    "tzdata>=2025.2",
    "uvicorn>=0.38.0",
]
